--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <ul class="gallery"></ul>
         <button class="loadMoreBtn hidden" type="button">Load more</button>
-        <span class="loader hidden"></span>
+        <div class="loader hidden"></div>
       </div>
 
     </section>
